集成redis缓存和rabbitmq
